@@ -80,7 +80,7 @@
 				<aspectratio align="center" aligny="center">keep</aspectratio>
 				<texture>$VAR[LibraryClearLogoVar]</texture>
 				<visible>Control.IsVisible(51)</visible>
-		  		<visible>!Skin.HasSetting(LibrayClearLogo)</visible>
+		  		<visible>!Skin.HasSetting(enable_LibraryClearLogo)</visible>
 		  		<visible>!Container.Scrolling + !Window.IsVisible(DialogVolumeBar.xml)</visible>
 			</control>
 			<control type="image">
@@ -91,12 +91,12 @@
 				<aspectratio align="center" aligny="center">keep</aspectratio>
 				<texture>$VAR[LibraryClearLogoVar]</texture>
 				<visible>Control.IsVisible(53)</visible>
-		  		<visible>!Skin.HasSetting(LibrayClearLogo)</visible>
+		  		<visible>!Skin.HasSetting(enable_LibraryClearLogo)</visible>
 		  		<visible>!Container.Scrolling + !Window.IsVisible(DialogVolumeBar.xml)</visible>
 			</control>
 			<control type="group">
 				<include>OpenClose_Left</include>
-				<visible>!Skin.HasSetting(LibrayClearLogo)</visible>
+				<visible>!Skin.HasSetting(enable_LibraryClearLogo)</visible>
 			<control type="image">
 				<top>15</top>
 				<width>284</width>
@@ -108,7 +108,7 @@
 			</control>
 			</control>
 			<control type="group">
-				<visible>!Skin.HasSetting(LibrayClearLogo)</visible>
+				<visible>!Skin.HasSetting(enable_LibraryClearLogo)</visible>
 				<visible>!Container.Scrolling + !Window.IsVisible(DialogVolumeBar.xml)</visible>
 				<visible>Control.IsVisible(500)</visible>
 			<control type="image">
